--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Petición San Valentín</title>
+    <title>Para mi bonita</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="envelope">
         <div class="envelope-inner">
             <div class="envelope-front">
-                <p>Para Meylin</p>
+                <p>Para: Memey</p>
                 <p>De: Kalebcito</p>
             </div>
             <div class="envelope-back">
                 <div class="letter">
-                    <p>Hola amor,</p>
-                    <p>Quería pedirte que seas mi San Valentín. 💖</p>
-                    <p>Con todo mi amor, Kalebcito</p>
+                    <p>HOLA PRINCESAA,</p>
+                    <p>Hace ya casi un año que te pedí que fueras mi san valentina, creo que no te haces la idea de lo feliz que fui ese día, era mi primer San Valentín especial  y todo gracias a ti 💖</p>
+                    <p>¿Me permitirías ser nuevamente tu san valentín?</p>
                 </div>
             </div>
         </div>
@@ -25,3 +25,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
