--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para mi bonita</title>
+    <title>Petición San Valentín</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="envelope">
         <div class="envelope-inner">
             <div class="envelope-front">
-                <p>Para: Memey</p>
-                <p>De: Kalebcito</p>
+                <div class="front-content">
+                    <img src="ruta-a-tu-imagen.jpg" alt="Imagen" class="front-image">
+                    <p>Para Meylin</p>
+                    <p>De: Kalebcito</p>
+                </div>
             </div>
             <div class="envelope-back">
                 <div class="letter">
                     <p>HOLA PRINCESAA,</p>
-                    <p>Hace ya casi un año que te pedí que fueras mi san valentina, creo que no te haces la idea de lo feliz que fui ese día, era mi primer San Valentín especial  y todo gracias a ti 💖</p>
+                    <p>Hace ya casi un año que te pedí que fueras mi san valentina, creo que no te haces la idea de lo feliz que fui ese día, era mi primer San Valentín especial y todo gracias a ti 💖</p>
                     <p>¿Me permitirías ser nuevamente tu san valentín?</p>
                 </div>
             </div>
@@ -25,4 +28,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
