--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Petición San Valentín</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,6 +22,10 @@
                     <p>HOLA PRINCESAA,</p>
                     <p>Hace ya casi un año que te pedí que fueras mi san valentina, creo que no te haces la idea de lo feliz que fui ese día, era mi primer San Valentín especial y todo gracias a ti 💖</p>
                     <p>¿Me permitirías ser nuevamente tu san valentín?</p>
+                </div>
+                <div class="buttons">
+                    <button class="button button-yes">Sí</button>
+                    <button class="button button-no">No</button>
                 </div>
             </div>
         </div>
