--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                     <button class="button button-yes">Sí</button>
                     <button class="button button-no">No</button>
                 </div>
+                <!-- Imagen debajo de los botones -->
+                <img src="imagenes/imagen.jpg" alt="Imagen romántica" class="back-image">
             </div>
         </div>
     </div>
