--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="envelope-inner">
             <div class="envelope-front">
                 <div class="front-content">
-                    <img src="https://i.imgur.com/b46coqj.png" alt="postal" class="front-image">
+                    <img src="https://i.imgur.com/js1PX1s.png" alt="postal" class="front-image">
                     <p>Para Meylin</p>
                     <p>De: Kalebcito</p>
                 </div>
