--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <button class="button button-no">No</button>
                 </div>
                 <!-- Imagen debajo de los botones -->
-                <img src="imagenes/imagen.jpg" alt="Imagen romántica" class="back-image">
+                <img src="https://i.imgur.com/DkwoaLa.png" alt="yovalentino" class="back-image">
             </div>
         </div>
     </div>
