--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <p>Hace ya casi un año que te pedí que fueras mi san valentina, creo que no te haces la idea de lo feliz que fui ese día, era mi primer San Valentín especial y todo gracias a ti 💖</p>
                     <p>¿Me permitirías ser nuevamente tu san valentín?</p>
                 </div>
-                <div class="buttons">
-                    <button class="button button-yes">Sí</button>
-                    <button class="button button-no">No</button>
-                </div>
+                 <div class="buttons">
+        <button id="yes-button" class="button button-yes">Sí</button>
+        <button id="no-button" class="button button-no">No</button>
+    </div>
                 <!-- Imagen debajo de los botones -->
                 <img src="https://i.imgur.com/DkwoaLa.png" alt="yovalentino" class="back-image">
             </div>
