--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
                 <!-- Imagen debajo de los botones -->
                 <img src="https://i.imgur.com/DkwoaLa.png" alt="yovalentino" class="back-image">
             </div>
+<!-- El resto de tu HTML sigue igual -->
+
+            <!-- Pop-up que aparecerá cuando se haga clic en "Sí" -->
+            <div id="popup" class="popup">
+                <div class="popup-content">
+                    <p>ESOOOO, te amo montones mi amorcito, disfruta este detallito link:</p>
+                    <a href="tu-enlace-aqui" target="_blank">Haz clic aquí para el detalle</a>
+                    <button id="close-popup" class="button">Cerrar</button>
+                </div>
         </div>
     </div>
     <script src="script.js"></script>
