--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                 </div>
         </div>
     </div>
-    <script src="script.js"></script>
+<!-- Vincula el script.js al final de tu archivo HTML -->
+<script src="script.js" defer></script>
 </body>
 </html>
 
