--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="envelope">
+    <div id="card" class="card">
         <div class="envelope-inner">
             <div class="envelope-front">
                 <div class="front-content">
