--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="card" class="envelope">
+    <div class="envelope">
         <div class="envelope-inner">
             <div class="envelope-front">
                 <div class="front-content">
@@ -32,7 +32,7 @@
             </div>
 <!-- El resto de tu HTML sigue igual -->
 
-            <!-- Pop-up que aparecerá cuando se haga clic en "Sí" -->
+      <div id="card" class="card">
             <div id="popup" class="popup">
                 <div class="popup-content">
                     <p>ESOOOO, te amo montones mi amorcito, disfruta este detallito link:</p>
@@ -41,6 +41,7 @@
                 </div>
         </div>
     </div>
+</div>
 <!-- Vincula el script.js al final de tu archivo HTML -->
 <script src="script.js" defer></script>
 </body>
