--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <div id="card" class="card">
             <div id="popup" class="popup">
                 <div class="popup-content">
-                    <p>ESOOOO, te amo montones mi amorcito, disfruta este detallito link:</p>
-                    <a href="tu-enlace-aqui" target="_blank">Haz clic aquí para el detalle</a>
+                    <p>BIEEEN, te amo montones mi amorcito, te regalo este detallito mientras:</p>
+                    <a href="https://puzzel.org/es/jigsaw/play?p=-OI9VmSkJ2c22GhfosLA" target="_blank">🧩🧩🧩</a>
                     <button id="close-popup" class="button">Cerrar</button>
                 </div>
         </div>
