--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 </div>
 <!-- Vincula el script.js al final de tu archivo HTML -->
 <script src="script.js" defer></script>
+<!-- Contenedor del reproductor -->
+    <div id="player"></div>
+
+    <script src="https://www.youtube.com/iframe_api"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
