--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
             <div class="envelope-front">
                 <div class="front-content">
                     <img src="https://i.imgur.com/js1PX1s.png" alt="postal" class="front-image">
-                    <p>Para Memey</p>
+                    <p>Para: Mi hermosa Memey</p>
                     <p>De: Kalebcito</p>
                 </div>
             </div>
             <div class="envelope-back">
                 <div class="letter">
                     <p>HOLA PRINCESAA,</p>
-                    <p>Hace ya casi un año que te pedí que fueras mi san valentina, creo que no te haces la idea de lo feliz que fui ese día, era mi primer San Valentín especial y todo gracias a ti, disfruté mucho de ir a conocer las ruinas, ir a pintar, comer pankeis y fue la primera vez que te daba flores, recuerdo que ese día estaba nervioso porque nunca había comprado flores JAJAJ, no sé que vayamos a hacer este 14 pero estoy seguro que si lo paso junto a ti cualquier plan será re lindo 💖</p>
-                    <p> Entonceeees ¿Me permitirías ser nuevamente tu san valentín?</p>
+                    <p>Hace ya casi un año que te pedí que fueras mi san valentina, creo que no te haces la idea de lo feliz que fui ese día, era mi primer San Valentín especial y todo gracias a ti, disfruté mucho de ir a conocer las ruinas, ir a pintar, comer pankeis y fue la primera vez que te daba flores, recuerdo que ese día estaba nervioso porque nunca le había comprado flores a alguien JAJAJ, hemos crecido mucho desde entonces y no sé que vayamos a hacer este 14 pero estoy seguro que si lo paso junto a ti cualquier plan será re lindo 💖</p>
+                    <p> Entonceeees ¿Me permitirías ser nuevamente tu san valentín preciosa?</p>
                 </div>
                  <div class="buttons">
         <button id="yes-button" class="button button-yes">Sí</button>
